Fixed mobile menu not fully collapsing

--- a/assets/postcss/styles.css
+++ b/assets/postcss/styles.css
@@ -2,6 +2,11 @@
     @tailwind components;
     @tailwind utilities;
     @layer base {
+        @media screen and (prefers-reduced-motion: no-preference) {
+            html, body {
+                scroll-behavior: smooth;
+            }
+        }
         body {
             @apply text-warmgray-700;
         }
